# WearableGasDetect

./: GUIFROM.lnk  GUITO.lnk  Patent.docx  主板设备以及IO占用.xlsx  关于GUI Guider在lvgl v7无法生成可直接支持页面滑动的page类型解决方案.docx
Backend/: .gitignore  README.md  requirements.txt
CH582F/CH582F/: .cproject  .template  CH582F.launch
CH582F/CH582FBKUP/: .template
CH582F/CH582FBackup/: CH582F.launch
CH582F_Peri_Err/CH582F/: .cproject
Frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
GUIGuiderUI/WearableGasUI/: WearableGasUI.guiguider
MainBoard_CH582/MainBoard_CH582/: .cproject  .project  .template  MainBoard_CH582.launch  MainBoard_CH582.wvproj
MainBody_CH32V307/MainBody_CH32V307/: .cproject
MainBody_CH32V307Backup/MainBody_CH32V307/: .cproject  .project  .template  MainBody_CH32V307.launch  MainBody_CH32V307.wvproj
MainBody_CH32V307_lvgl8310/MainBody_CH32V307/: MainBody_CH32V307.launch
PCB/: PCB-WearableGasDetect.epro  PCB-WirelessCharging.eprj  WearableGasDetect.epro
RemoteServer/Backend/: CMakeLists.txt
RemoteServer/Backend/MainServer/: README.md
RemoteServer/Backend/MainServer/Remote/: CMakeLists.txt
RemoteServer/Backend/MainServer/Remote/include/Backend/: BasicType.hpp  SQLiteDataBase.hpp  WGDServer.hpp
RemoteServer/Backend/MainServer/Remote/script/DataExample/: Sensor.json
RemoteServer/Backend/MainServer/Remote/src/: SQLiteDataBase.cpp  WGDServer.cpp
RemoteServer/Backend/MainServer/WearableGasDetect/test/: amap_geocode.py  tcp_client.py
RemoteServer/Backend/MainServer/WearableGasDetect/utils/: __init__.py
models/: 主板外壳.SLDPRT  主板外壳.STL  子设备.SLDASM  子设备.SLDDRW  标准壳1.STL  标准壳2.SLDPRT  标准壳2.STL  装配体2.SLDASM  零件1.SLDPRT  零件1.STL  零件13.SLDPRT  零件13.STL
temp/: lv_conf.h
(+173 files in other folders)
